--- a/css-animation-loader.html
+++ b/css-animation-loader.html
@@ -63,29 +63,29 @@
         position: relative;
         width: 300px;
         height: 300px;
-
     }
 
-    span{
+    span {
         position: absolute;
         display: block;
         width: 100%;
         height: 100%;
-        animation : rotate 5s linear infinite;
+        animation: rotate 5s linear infinite;
         animation-delay: calc(0.15s * var(--i));
-        
+
     }
 
     @keyframes rotate {
-        0%{
+        0% {
             transform: rotate(0);
         }
-        100%{
-            transform:rotate(720deg)
+
+        100% {
+            transform: rotate(720deg)
         }
     }
 
-    .bubble{
+    .bubble {
         position: absolute;
         width: 10px;
         height: 10px;
@@ -97,12 +97,13 @@
     }
 
     @keyframes size {
-        0%{filter: hue-rotate(0deg)}
-        90%{
+        0% {
+            filter: hue-rotate(0deg)
+        }
+
+        90% {
             transform: scale(15);
             filter: hue-rotate(360deg);
         }
     }
-
-
 </style>
